fix databse urls in yml file ,dockerfile,env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .env
+
+
+DATABASE_PUBLIC_URL=postgresql://${{PGUSER}}:${{POSTGRES_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{PGDATABASE}}
