--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
     depends_on:
       - redis
     environment:
-      - DATABASE_URL=postgresql+psycopg2://postgres:2004@host.docker.internal:5432/Place-Pulse
+#      - DATABASE_URL=postgresql+psycopg2://postgres:2004@host.docker.internal:5432/Place-Pulse
+      - DATABASE_URL=${DATABASE_URL}
