replace  app:create_app with app:create_app()

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
 
   web:
     build: .
-    command: gunicorn --bind 0.0.0.0:$PORT 'app:create_app'
+    command: gunicorn --bind 0.0.0.0:$PORT 'app:create_app()'
     volumes:
       - .:/app
     ports:
